# syren

./: .env.example  .gitignore  .npmrc  AI.md  CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/: settings.json
apps/syren/api/: eslint.config.js  nest-cli.json  package.json  tsconfig.build.json
apps/syren/api/src/: app.module.ts  main.ts
apps/syren/api/src/audit-log/: audit-log.controller.ts  audit-log.module.ts  audit-log.repository.ts  audit-log.service.ts
apps/syren/api/src/auth/: auth.controller.ts  auth.guard.ts  auth.module.ts  auth.service.ts  member-access.service.ts  permission.guard.ts  require-permission.decorator.ts  server-access.decorator.ts  server-access.guard.ts  user.repository.ts
apps/syren/api/src/category/: category.controller.ts  category.module.ts  category.service.ts
apps/syren/api/src/channel/: channel.controller.ts  channel.module.ts  channel.repository.ts  channel.service.ts
apps/syren/api/src/common/: record-id.interceptor.ts  serialize.ts
apps/syren/api/src/common/pagination/: index.ts  order.ts  paginated-query.decorator.ts  pagination.types.ts  pagination.util.ts
apps/syren/api/src/db/: base.repository.ts  db.module.ts  db.service.ts
apps/syren/api/src/dto/: index.ts
apps/syren/api/src/embed/: embed.module.ts  embed.service.ts
apps/syren/api/src/gateway/: chat.gateway.ts  gateway.module.ts
apps/syren/api/src/member/: member.controller.ts  member.module.ts  member.service.ts
apps/syren/api/src/message/: message.controller.ts  message.module.ts  message.repository.ts  message.service.ts
apps/syren/api/src/permission-override/: override.controller.ts  override.module.ts  override.repository.ts  override.service.ts
apps/syren/api/src/profile-watcher/: profile-watcher.module.ts  profile-watcher.service.ts
apps/syren/api/src/proxy/: proxy.controller.ts  proxy.module.ts  syr-proxy.controller.ts
apps/syren/api/src/relation/: relation.controller.ts  relation.module.ts  relation.repository.ts  relation.service.ts
apps/syren/api/src/role/: role.controller.ts  role.module.ts  role.service.ts
apps/syren/api/src/server/: server.controller.ts  server.module.ts  server.repository.ts  server.service.ts
apps/syren/api/src/upload/: upload.controller.ts  upload.module.ts  upload.repository.ts  upload.service.ts
apps/syren/api/src/user/: user.controller.ts  user.module.ts
apps/syren/api/src/voice/: livekit.service.ts  voice.controller.ts  voice.module.ts  voice.repository.ts  voice.service.ts
apps/syren/app/: package.json
apps/syren/app/src/: app.css  app.d.ts
apps/syren/app/src/lib/: api.ts
apps/syren/app/src/lib/components/: animated-avatar.svelte  audit-event-row.svelte  audit-log-panel.svelte  channel-permission-editor.svelte  channel-sidebar.svelte  create-channel-dialog.svelte  create-server-dialog.svelte  emoji-picker.svelte  gif-picker.svelte  invite-dialog.svelte  member-list.svelte  member-roles-popover.svelte  members-dialog.svelte  message-input.svelte  message-item.svelte  moderation-sheet.svelte  nav-user.svelte  paginated-table.svelte  pins-panel.svelte  post-feed.svelte  profile-hover-card.svelte  role-edit-dialog.svelte  role-toggle-list.svelte  roles-dialog.svelte  safe-media.svelte  screen-share-view.svelte  server-list.svelte  server-settings-dialog.svelte  voice-channel-users.svelte  voice-controls.svelte  voice-room-view.svelte
apps/syren/app/src/lib/stores/: auth.svelte.ts  emojis.svelte.ts  gifs.svelte.ts  idle.svelte.ts  members.svelte.ts  messages.svelte.ts  moderation-target.svelte.ts  overrides.svelte.ts  perms.svelte.ts  relations.svelte.ts  roles.svelte.ts  servers.svelte.ts  stories.svelte.ts  ws.svelte.ts
apps/syren/app/src/lib/utils/: attach-stream.ts
apps/syren/app/src/lib/voice/: livekit-engine.ts  voice-activity.svelte.ts  voice-engine.ts
apps/syren/app/src/routes/: +page.svelte
apps/syren/app/src/routes/(app)/: +layout.svelte
apps/syren/app/src/routes/login/: +page.svelte
apps/syren/native/: .gitignore  README.md  package.json  svelte.config.js  vite.config.ts
apps/syren/native/src/: app.css  app.html
apps/syren/native/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/syren/native/src-tauri/.cargo/: config.toml
apps/syren/native/src-tauri/capabilities/: default.json  mobile.json
apps/syren/native/src-tauri/icons/: icon.icns
apps/syren/native/src-tauri/src/: apple_webview.rs  auth.rs  commands.rs  device_enum.rs  lib.rs  macos_webview.rs  main.rs  realtime.rs  session_store.rs  voice.rs  voice_audio.rs  voice_video.rs
apps/syren/native/src/lib/: client.ts  host-store.ts  native-api.ts  native-realtime.ts  native-voice.ts  page-sidebar.svelte.ts  session-bridge.ts
apps/syren/native/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/syren/native/src/routes/(app)/: +layout.svelte
apps/syren/native/src/routes/login/: +page.svelte
apps/syren/native/src/routes/setup/: +page.svelte
apps/syren/web/: eslint.config.js  package.json  svelte.config.js  vite.config.ts
apps/syren/web/src/: app.html
apps/syren/web/src/lib/: api.ts
apps/syren/web/src/lib/components/: audit-event-row.svelte  channel-edit-dialog.svelte  channel-sidebar.svelte  image-field.svelte  image-lightbox.svelte  moderation-sheet.svelte  nav-user.svelte  paginated-table.svelte  post-item.svelte  profile-hover-card.svelte  role-edit-dialog.svelte  role-toggle-list.svelte  safe-link.svelte  status-picker.svelte  story-viewer.svelte  syr-upload-picker.svelte  (+2 more)
apps/syren/web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
docker/dev/: syren.dockerfile
docker/prod/: livekit.yaml  syren-api.dockerfile  syren.dockerfile
s3/: s3_config.json
s3/data/: 1.idx  1.vif  syren_2.idx  vol_dir.uuid
s3/data/filerldb2/00/: LOG
s3/data/filerldb2/01/: LOG
s3/data/filerldb2/02/: LOG
s3/data/filerldb2/03/: LOG
s3/data/filerldb2/04/: LOG
s3/data/filerldb2/05/: LOG
s3/data/filerldb2/06/: LOG
s3/data/filerldb2/07/: LOG
s3/data/m9333/: log
(+68 files in other folders)
