[package]
name = "syren-native"
version = "0.0.1"
description = "Syren — federated chat on syr"
authors = ["syr.is"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "syren_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Sets up the JNI symbol exports libwebrtc needs to bridge audio /
# video frames from Kotlin into Rust. No-op on non-Android targets.
webrtc-sys-build = "0.3"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt"] }
url = "2"
syren-client = { path = "../../../../packages/rust/syren-client" }
syren-types = { path = "../../../../packages/rust/syren-types" }

# ── Voice (LiveKit) ─────────────────────────────────────────────────
#
# Rust LiveKit SDK + libwebrtc. Same `Room` / `RtcAudioSource` /
# `RtcVideoStream` lifecycle on every platform; only the audio I/O
# pipeline differs (cpal on desktop, platform-native on mobile via
# JNI / FFI). `webrtc-sys-build` (a build-dep above) downloads the
# right libwebrtc binary for the active target — first build pulls a
# couple hundred MB of artefacts; subsequent builds reuse the cache.
livekit = { version = "0.7", features = ["rustls-tls-webpki-roots"] }
livekit-api = { version = "0.4", default-features = false, features = ["access-token"] }
parking_lot = "0.12"
futures = "0.3"
# Used to base64-encode JPEG-encoded remote-video frames for the
# `voice-video-frame` Tauri event payload (Tauri's IPC is JSON, so
# raw bytes need to be encoded).
base64 = "0.22"

# Mobile (Android / iOS): OAuth callback comes back via deep link.
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-deep-link = "2"

# Desktop only: tauri-plugin-oauth depends on tiny_http which doesn't
# build for Android / iOS. We bind a loopback HTTP server on a random
# port for the duration of each handshake; the OAuth redirect_uri is
# `http://localhost:<port>/`, the system browser hits it, and the
# plugin's request handler fires our callback with the full URL.
#
# Voice audio I/O is also desktop-only here — `cpal` binds CoreAudio /
# WASAPI / ALSA / PulseAudio directly. Mobile targets supply their own
# audio capture / playback via the platform shell.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-oauth = "2"
cpal = "0.15"

# Camera enumeration + capture on desktop. Each platform pulls a
# different nokhwa backend so we can ask the OS for its real cameras
# instead of pretending the device list is empty (the WebView has no
# `navigator.mediaDevices`). `default-features = false` skips deps
# we don't need; `output-threaded` is what surfaces `CallbackCamera`
# and the `Buffer::buffer()` accessor used by the capture loop.
#
# `yuv-sys` is libyuv compiled to Rust — we need it for the YUYV /
# RGB24 / MJPEG -> I420 conversions libwebrtc's `NativeVideoSource`
# expects, plus the I420 -> RGBA path for sending remote frames into
# the WebView.
[target.'cfg(target_os = "macos")'.dependencies.nokhwa]
version = "0.10"
default-features = false
features = ["input-avfoundation", "output-threaded"]

[target.'cfg(target_os = "linux")'.dependencies.nokhwa]
version = "0.10"
default-features = false
features = ["input-v4l", "output-threaded"]

[target.'cfg(target_os = "windows")'.dependencies.nokhwa]
version = "0.10"
default-features = false
features = ["input-msmf", "output-threaded"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies.yuv-sys]
version = "0.3.14"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies.image]
version = "0.25"
default-features = false
features = ["jpeg"]

# SIMD JPEG encoder for the local-preview + remote-display sidechannel.
# `image::codecs::jpeg::JpegEncoder` is pure scalar Rust and saturates a
# core at 720p / 30 fps, which was choppy. mozjpeg wraps libjpeg-turbo
# with AVX2 / NEON, so per-frame encode drops from ~40ms to ~3ms.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies.mozjpeg]
version = "0.10"
default-features = false
features = ["with_simd"]

# iOS-only: lets us configure WKWebView via objc2 so `env(safe-area-inset-*)`
# returns non-zero values inside the webview.
[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }

# Android-only: JNI surface for the platform shell to push captured PCM
# samples into Rust and pull playback PCM samples out.
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
