[package]
name = "syren-native"
version = "0.0.1"
description = "Syren — federated chat on syr"
authors = ["syr.is"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "syren_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt"] }
url = "2"
syren-client = { path = "../../../../packages/rust/syren-client" }
syren-types = { path = "../../../../packages/rust/syren-types" }

# Mobile (Android / iOS): OAuth callback comes back via deep link.
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-deep-link = "2"

# Desktop only: tauri-plugin-oauth depends on tiny_http which doesn't
# build for Android / iOS. We bind a loopback HTTP server on a random
# port for the duration of each handshake; the OAuth redirect_uri is
# `http://localhost:<port>/`, the system browser hits it, and the
# plugin's request handler fires our callback with the full URL.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-oauth = "2"

# Apple targets (macOS + iOS) share the same WebKit underneath, so
# the same `objc2` glue lights up `navigator.mediaDevices` on both —
# `_registerURLSchemeAsSecure:` on the `tauri://` scheme + a custom
# `WKUIDelegate` that auto-grants media-capture permissions at the
# WebKit layer. TCC still gates actual hardware via the `Info.plist`
# usage descriptions, so the user gets the standard OS prompt the
# first time around. The same crates also drive the iOS-only safe-
# area helper that sets `env(safe-area-inset-*)` inside the webview.
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
